--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AgilePhD | Welcome</title>
+    <title>Benjamin Moran | Welcome</title>
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="https://s3.amazonaws.com/agilephd/styles/main.css">
@@ -52,17 +52,13 @@
       <div class="medium-4 columns">
         <h3>Project Management</h3>
         <p>
-          Speed is what companies want as they adopt Agile. Traditional
-          plan-driven methodologies like Waterfall make a lot of up front
-          assumptions and leave no flexibility to adapt to the changing
-          needs of the customer.
+          I took Project Management (ISDS 4113) last semester and made an 100% on the final so... yeah
         </p>
       </div>
       <div class="medium-4 columns">
-        <h3>Software Development</h3>
+        <h3>Wait, What's going on here?</h3>
         <p>
-          It's all about that MVP (minimally viable product) and getting
-          it in front of your customers.  I love building technology products.
+          I'm actually not all too sure if I am supposed to be editing this, but I decided to see what I could do
         </p>
       </div>
       <div class="medium-4 columns">
@@ -176,10 +172,10 @@
     <div class="reveal" id="contactModal" data-reveal>
       <h4>Contact information</h4>
       <ul class="no-bullet">
-        <li>Dr. James Davis, PhD, PMP, CSP, CSM</li>
+        <li>Benjamin Moran</li>
         <li>
-          <a href="mailto:james@agilephd.com?Subject=AgilePhD" target="_top">
-            james@agilephd.com
+          <a href="mailto:bmoran7@lsu.edu?Subject=AgilePhD" target="_top">
+            bmoran7@lsu.edu
           </a>
         </li>
         <li><a href="tel:+12258920230">+1.225.892.0230</a></li>
