--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benjamin Moran | Welcome</title>
+    <title>Benjamin Moran | My First</title>
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="https://s3.amazonaws.com/agilephd/styles/main.css">
@@ -15,12 +15,12 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text agilephd">AgilePhD</li>
+          <li class="menu-text agilephd">Benjimanmoran</li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a data-open="contactModal">Contact</a></li>
+          <li><a data-open="contactModal">Hit me up</a></li>
         </ul>
       </div>
     </div>
@@ -28,7 +28,7 @@
 
     <div class="callout large scrum">
       <div class="row column text-center bottom">
-        <h1 class="scrum_h1 bottom">Organizational Change Through Agile Methods</h1>
+        <h1 class="scrum_h1 bottom">hopefully this works</h1>
       </div>
     </div>
 
@@ -62,7 +62,7 @@
         </p>
       </div>
       <div class="medium-4 columns">
-        <h3>Cloud Services</h3>
+        <h3>Whatchamacallit</h3>
         <p>
           As an early adopter several cloud technologies, AgilePhD can
           help you develop a scalable solutions allowing you to focus
@@ -90,7 +90,7 @@
     <hr>
 
     <div class="row column">
-      <h3>Recent Web Apps</h3>
+      <h3>Thingamajigs</h3>
     </div>
 
     <div class="row medium-up-3 ">
@@ -124,7 +124,7 @@
     <hr>
 
     <div class="row column">
-      <h3>Recent Mobile Apps</h3>
+      <h3>Whosie Whatsie</h3>
     </div>
 
     <div class="row small-up-2 medium-up-5 ">
