--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benjamin Moran | My First</title>
+    <title>Benjamin Moran | My Website</title>
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="https://s3.amazonaws.com/agilephd/styles/main.css">
@@ -15,12 +15,12 @@
     <div class="top-bar">
       <div class="top-bar-left">
         <ul class="menu">
-          <li class="menu-text agilephd">Benjimanmoran</li>
+          <li class="menu-text agilephd">Benjamin Moran</li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a data-open="contactModal">Hit me up</a></li>
+          <li><a data-open="contactModal">Details</a></li>
         </ul>
       </div>
     </div>
@@ -28,7 +28,7 @@
 
     <div class="callout large scrum">
       <div class="row column text-center bottom">
-        <h1 class="scrum_h1 bottom">hopefully this works</h1>
+        <h1 class="scrum_h1 bottom">Welcome to My Website</h1>
       </div>
     </div>
 
@@ -38,11 +38,9 @@
           src="https://s3.amazonaws.com/agilephd/project_management.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>Agile Project Management</h2>
+        <h2>Who am I?</h2>
         <p>
-          As an experienced agile project manager, AgilePhD is the niche provider
-          clients seek out when they are looking to implement business-enhancing,
-          agile PMO services that improve project and portfolio performance.
+        My name is Benjamin Moran
         </p>
 
       </div>
@@ -50,7 +48,7 @@
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Project Management</h3>
+        <h3>Look here!</h3>
         <p>
           I took Project Management (ISDS 4113) last semester and made an 100% on the final so... yeah
         </p>
@@ -156,29 +154,16 @@
     <div class="row column">
       <ul class="menu">
 
-        <li>
-          <a href="https://www.linkedin.com/in/jdavisphd/" class="" target="_blank">
-            <img src="https://s3.amazonaws.com/agilephd/webicon-linkedin-m.png">
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/cavalryjim" class="" target="_blank">
-            <img src="https://s3.amazonaws.com/agilephd/webicon-github-m.png">
-          </a>
-        </li>
-      </ul>
-    </div>
-
     <div class="reveal" id="contactModal" data-reveal>
-      <h4>Contact information</h4>
+      <h4>Contact Information</h4>
       <ul class="no-bullet">
-        <li>Benjamin Moran</li>
+        <li>Benjamin J. Moran</li>
         <li>
           <a href="mailto:bmoran7@lsu.edu?Subject=AgilePhD" target="_top">
             bmoran7@lsu.edu
           </a>
         </li>
-        <li><a href="tel:+12258920230">+1.225.892.0230</a></li>
+        <li><a href="tel:2254504250">225-450-4250</a></li>
       </ul>
       <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
