--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
     <div class="row column">
       <ul class="vertical medium-horizontal menu expanded text-center">
         <li>
-          <a href="#"><div class="stat">600+</div><span>Students Trained</span></a>
+          <a href="#"><div class="stat">2</div><span>Different Colleges Attended</span></a>
         </li>
         <li>
-          <a href="#"><div class="stat">20+</div><span>Web App Projects</span></a>
+          <a href="#"><div class="stat">6+</div><span>Different Majors Tried Out</span></a>
         </li>
         <li>
-          <a href="#"><div class="stat">12+</div><span>Mobile App Projects</span></a>
+          <a href="#"><div class="stat">1000+</div><span>I have asked myself what is going on</span></a>
         </li>
       </ul>
     </div>
