--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="top-bar-right">
         <ul class="menu">
-          <li><a data-open="contactModal">Details</a></li>
+          <li><a data-open="contactModal">Contact Information</a></li>
         </ul>
       </div>
     </div>
@@ -40,7 +40,7 @@
       <div class="medium-6 columns medium-pull-6">
         <h2>Who am I?</h2>
         <p>
-        My name is Benjamin Moran
+        My name is Benjamin Moran and I am a ISDS Business Intelligence major at Louisiana State University. I am currently in ISDS 3107 which is an introductory programming class and this would be our first "gig" as Dr. Davis calls it.
         </p>
 
       </div>
@@ -56,15 +56,13 @@
       <div class="medium-4 columns">
         <h3>Wait, What's going on here?</h3>
         <p>
-          I'm actually not all too sure if I am supposed to be editing this, but I decided to see what I could do
+          You are currently in view of my first website, may be the first of many, may be the one and only. Whichever the case, I'm happy you have found your way over here.
         </p>
       </div>
       <div class="medium-4 columns">
-        <h3>Whatchamacallit</h3>
+        <h3>What is my plan?</h3>
         <p>
-          As an early adopter several cloud technologies, AgilePhD can
-          help you develop a scalable solutions allowing you to focus
-          on your core business.
+          To be happy and to make the world a better place, that's the plan.
         </p>
       </div>
     </div>
