--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="medium-6 columns medium-push-6">
         <img class="thumbnail pm_image"
-          src="https://www.google.com/imgres?imgurl=http%3A%2F%2Fmedia.graytvinc.com%2Fimages%2F810*455%2FLSU%2BWEB%2BGRAPHIC.png&imgrefurl=https%3A%2F%2Fwww.knoe.com%2Fcontent%2Fnews%2FLSU-starter-for-2018-will-be-former-Ohio-State-QB-Joe-Burrow-491825301.html&docid=ZGiaRus4hh6SCM&tbnid=vwAupoo3_nzk7M%3A&vet=10ahUKEwip3MOP5vXfAhVIKKwKHbNjDLAQMwhyKAgwCA..i&w=810&h=455&hl=en&safe=active&bih=626&biw=1366&q=lsu&ved=0ahUKEwip3MOP5vXfAhVIKKwKHbNjDLAQMwhyKAgwCA&iact=mrc&uact=8g">
+          src="lsu.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6">
         <h2>Who am I?</h2>
