--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="medium-6 columns medium-push-6">
         <img class="thumbnail pm_image"
-          src="lsu.jpg">
+          src="pic_trulli.jpg" alt="Trulli" width="500" height="333"">
       </div>
       <div class="medium-6 columns medium-pull-6">
         <h2>Who am I?</h2>
@@ -48,9 +48,9 @@
 
     <div class="row">
       <div class="medium-4 columns">
-        <h3>Look here!</h3>
+        <h3>Hello World</h3>
         <p>
-          I took Project Management (ISDS 4113) last semester and made an 100% on the final so... yeah
+          What do I say here? Hi Mom? I've made it? Many things could be in place here but I think I will go with "here we go."
         </p>
       </div>
       <div class="medium-4 columns">
