--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="medium-6 columns medium-push-6">
         <img class="thumbnail pm_image"
-          src="pic_trulli.jpg" alt="Trulli" width="500" height="333"">
+          src="pic_trulli.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6">
         <h2>Who am I?</h2>
