--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/health_engagements.png">
+          src="http://media.graytvinc.com/images/810*455/LSU+WEB+GRAPHIC.png">
       </div>
       <div class="column">
         <img class="thumbnail"
