--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="row medium-up-3 ">
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/damagelist.png">
+          src="https://walk-ons.com/assets/uploads/images/WO_profile.jpg">
       </div>
       <div class="column">
         <img class="thumbnail"
