--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <hr>
 
     <div class="row column">
-      <h3>Thingamajigs</h3>
+      <h3>Some pictures I found out how to add</h3>
     </div>
 
     <div class="row medium-up-3 ">
@@ -96,7 +96,7 @@
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/animalminder_2.jpg">
+          src=https://ragincajuns.com/images/2018/7/31/McManus_Cody_2018_Headshot.jpg?>
       </div>
       <div class="column">
         <img class="thumbnail"
