--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <hr>
 
     <div class="row column">
-      <h3>Some pictures I found out how to add</h3>
+      <h3>Further Investigation</h3>
     </div>
 
     <div class="row medium-up-3 ">
@@ -100,7 +100,7 @@
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/sabot_solutions.png">
+          src=http://static-34.sinclairstoryline.com/resources/media/a7de885c-97a4-4bed-b81d-0982456ff11c-large16x9_RaisingCanes.jpg>
       </div>
       <div class="column">
         <img class="thumbnail"
