--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Benjamin Moran | My Website</title>
     <link rel="stylesheet"
       href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    <link rel="stylesheet" href="https://s3.amazonaws.com/agilephd/styles/main.css">
+    <link rel="stylesheet" href=https://www.skinit.com/media/catalog/category/louisiana-state-university-cases-and-skins.jpg>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
